--- a/src/gui/scss/core/_firebot-item-table.scss
+++ b/src/gui/scss/core/_firebot-item-table.scss
@@ -1,6 +1,8 @@
-.firebot-item-table {
+firebot-item-table {
     overflow-y: scroll;
     height: 100%;
+    width: 100%;
+    display: block;
 }
 
 .fit-header {
