--- a/src/gui/app/templates/_channel-rewards.html
+++ b/src/gui/app/templates/_channel-rewards.html
@@ -1,13 +1,4 @@
-<div
-  style="
-    min-width: 500px;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-  "
-  ng-if="canUseChannelRewards()"
->
+<div ng-if="canUseChannelRewards()" class="fb-tabbed-page">
   <div class="fb-tab-wrapper">
     <ul class="nav nav-tabs fb-tabs">
       <li
@@ -27,68 +18,67 @@
     </ul>
   </div>
   
-  <div style="overflow-y: scroll; height: 100%;">
-    <firebot-item-table
-      ng-if="activeChannelRewardTab === 0"
-      items="channelRewardsService.channelRewards"
-      on-items-update="onRewardsUpdated(items)"
-      headers="rewardHeaders"
-      sort-tag-context="channel rewards"
-      orderable="true"
-      add-new-button-disabled="channelRewardsService.channelRewards.length >= 50"
-      add-new-button-text="New Channel Reward"
-      on-add-new-clicked="channelRewardsService.showAddOrEditRewardModal()"
-      context-menu-options="rewardMenuOptions(item)"
-      no-data-message="No channel rewards saved. You should make one! :)"
-      none-found-message="No channel rewards found."
-      search-placeholder="Search rewards"
-      test-button="true"
-      on-test-button-clicked="channelRewardsService.manuallyTriggerReward(itemId)"
-      status-field="twitchData.isEnabled"
-    >
-      <fb-item-table-toolbar>
-        <button
-          class="btn btn-default"
-          uib-tooltip="Twitch Sync"
-          ng-click="channelRewardsService.syncChannelRewards()"
-        >
-          <i class="fas fa-sync"></i>
-        </button>
-      </fb-item-table-toolbar>
-      <fb-item-table-footer>
-        <div class="p-6" style="display: flex; align-items: center">
-          <div style="flex-shrink: 0; display: flex; align-items: center">
-            <span
-              >Reward Limit
-              <tooltip text="'Twitch limits channels to 50 total channel rewards.'"
-            /></span>
-            <span class="my-0 mx-4" style="font-size: 20px;">
-              {{channelRewardsService.channelRewards.length}} / 50
-            </span>
-          </div>
-          <div style="width: 100%">
+  <firebot-item-table
+    ng-if="activeChannelRewardTab === 0"
+    items="channelRewardsService.channelRewards"
+    on-items-update="onRewardsUpdated(items)"
+    headers="rewardHeaders"
+    sort-tag-context="channel rewards"
+    orderable="true"
+    add-new-button-disabled="channelRewardsService.channelRewards.length >= 50"
+    add-new-button-text="New Channel Reward"
+    on-add-new-clicked="channelRewardsService.showAddOrEditRewardModal()"
+    context-menu-options="rewardMenuOptions(item)"
+    no-data-message="No channel rewards saved. You should make one! :)"
+    none-found-message="No channel rewards found."
+    search-placeholder="Search rewards"
+    test-button="true"
+    on-test-button-clicked="channelRewardsService.manuallyTriggerReward(itemId)"
+    status-field="twitchData.isEnabled"
+  >
+    <fb-item-table-toolbar>
+      <button
+        class="btn btn-default"
+        uib-tooltip="Twitch Sync"
+        ng-click="channelRewardsService.syncChannelRewards()"
+      >
+        <i class="fas fa-sync"></i>
+      </button>
+    </fb-item-table-toolbar>
+    <fb-item-table-footer>
+      <div class="p-6" style="display: flex; align-items: center">
+        <div style="flex-shrink: 0; display: flex; align-items: center">
+          <span
+            >Reward Limit
+            <tooltip text="'Twitch limits channels to 50 total channel rewards.'"
+          /></span>
+          <span class="my-0 mx-4" style="font-size: 20px;">
+            {{channelRewardsService.channelRewards.length}} / 50
+          </span>
+        </div>
+        <div style="width: 100%">
+          <div
+            style="
+              width: 100%;
+              background: #24262a;
+              height: 8px;
+              border-radius: 8px;
+              overflow: hidden;
+            "
+          >
             <div
-              style="
-                width: 100%;
-                background: #24262a;
-                height: 8px;
-                border-radius: 8px;
-                overflow: hidden;
-              "
-            >
-              <div
-                style="height: 100%; background: #2aa2c0"
-                ng-style="{ width: ((channelRewardsService.channelRewards.length / 50) * 100) + '%' }"
-              ></div>
-            </div>
+              style="height: 100%; background: #2aa2c0"
+              ng-style="{ width: ((channelRewardsService.channelRewards.length / 50) * 100) + '%' }"
+            ></div>
           </div>
         </div>
-      </fb-item-table-footer>
-    </firebot-item-table>
-    <channel-reward-queue-manager 
-      ng-if="activeChannelRewardTab === 1"
-    />
-  </div>
+      </div>
+    </fb-item-table-footer>
+  </firebot-item-table>
+  <channel-reward-queue-manager
+    style="height: 100%; overflow: clip;"
+    ng-if="activeChannelRewardTab === 1"
+  />
 </div>
 
 <div
