feat(variables): implement ui for variable macros

--- a/src/gui/scss/core/_bootstrap-overrides.scss
+++ b/src/gui/scss/core/_bootstrap-overrides.scss
@@ -426,6 +426,9 @@ textarea.form-control {
         font-size: 13px;
         color: #9a9a9a;
     }
+    &.has-error .help-block {
+        color: #a94442;
+    }
 }
 
 .has-error .form-control {
