feat: implement option to calculate ranks for all viewers

--- a/src/gui/scss/core/_bootstrap-overrides.scss
+++ b/src/gui/scss/core/_bootstrap-overrides.scss
@@ -456,6 +456,19 @@ textarea.form-control {
     opacity: 0.75;
 }
 
+.progress {
+    background-color: $form-control-bg;
+    border-radius: 8px;
+    height: 30px;
+}
+
+.progress-bar {
+    line-height: 30px;
+    text-wrap: nowrap;
+}
+
+
+
 label {
     font-size: 15px;
     font-weight: 400;
