fix(ui): dashboard has extra y scroll space from activity feed being too tall
Fixes #2662

--- a/src/gui/scss/core/_chat.scss
+++ b/src/gui/scss/core/_chat.scss
@@ -713,6 +713,8 @@
     flex-shrink: 0;
     height: 100%;
     min-width: 145px;
+    display: flex;
+    flex-direction: column;
 }
 
 // Chat Screen
