--- a/src/gui/scss/core/_global.scss
+++ b/src/gui/scss/core/_global.scss
@@ -52,22 +52,13 @@
   background: #060707;
   position: absolute;
   right: 0px;
-  top: -341px;
+  bottom: 100%;
+  top: unset;
   z-index: 3000;
   border-radius: 8px;
-  &.has-magic-vars {
-    top: -376px;
-  }
-  &.below {
-    top: 41px !important;
-  }
-  &.bottom {
-    bottom: 41px;
-    top: unset !important;
-  }
-  &.under {
+  &.below, &.under, &.bottom {
     bottom: unset;
-    top: unset !important;
+    top: 100%;
   }
 }
 
