feat: Remember Active Dashboard Chat User
- Caches the active chatter in the dashboard when the chat-messages
  controller gets reloaded.
- This intentionally **does not** get saved to disk, and the application
  will always start back up with "Streamer" as the active chat sender.
- Previously, changing component tabs then changing back would cause the
  chat sender to get reset to Streamer. This is *not* cool.
- Implements #2353

--- a/src/gui/app/templates/chat/_chat-messages.html
+++ b/src/gui/app/templates/chat/_chat-messages.html
@@ -139,10 +139,8 @@
             <div class="fb-arrow down mx-4 mb-1"></div>
           </span>
           <ul class="dropdown-menu">
-            <li ng-click="chatSender = 'Streamer'"><a href>Streamer</a></li>
-            <li ng-click="chatSender = 'Bot'" ng-show="botLoggedIn">
-              <a href>Bot</a>
-            </li>
+            <li ng-click="setChatSender('Streamer')"><a>Streamer</a></li>
+            <li ng-click="setChatSender('Bot')" ng-show="botLoggedIn"><a>Bot</a></li>
           </ul>
         </div>
 
