--- a/src/gui/app/templates/chat/_chat-messages.html
+++ b/src/gui/app/templates/chat/_chat-messages.html
@@ -122,7 +122,7 @@
       <div
         class="text-input"
         chat-auto-complete-menu
-        ng-model="chatMessage"
+        ng-model="cms.chatMessage"
         input-id="chatMessageInput"
       >
         <div class="dropup">
@@ -133,15 +133,13 @@
             tooltip-placement="left"
             tooltip-append-to-body="true"
           >
-            <span class="ml-4" style="width: 100%; text-align: center"
-              >{{chatSender}}</span
-            >
+            <span class="ml-4" style="width: 100%; text-align: center">{{cms.chatSender}}</span>
             <div class="fb-arrow down mx-4 mb-1"></div>
           </span>
           <ul class="dropdown-menu">
-            <li ng-click="chatSender = 'Streamer'"><a href>Streamer</a></li>
-            <li ng-click="chatSender = 'Bot'" ng-show="botLoggedIn">
-              <a href>Bot</a>
+            <li ng-click="cms.chatSender = 'Streamer'"><a>Streamer</a></li>
+            <li ng-click="cms.chatSender = 'Bot'" ng-show="botLoggedIn">
+              <a>Bot</a>
             </li>
           </ul>
         </div>
@@ -153,7 +151,7 @@
           class="text-input-field"
           style="height: 100%"
           ng-maxlength="360"
-          ng-model="chatMessage"
+          ng-model="cms.chatMessage"
           ng-change="onMessageFieldUpdate()"
           ng-keydown="onMessageFieldKeypress($event)"
           ng-trim="false"
