--- a/src/gui/scss/core/_global.scss
+++ b/src/gui/scss/core/_global.scss
@@ -1767,6 +1767,7 @@ thead th{
   padding-bottom: 0;
   font-family: 'Open Sans', sans-serif !important;
   color:$content-text-color;
+  background-color: $content-background-color;
 }
 
 .CodeMirror {
