fix: Light Theme Good Color
- Darkened the light theme $good-color from #90ee90 to #10a010.
- Added $good-color to restore backup modal success icon.
- Changed connection panel background from lightgreen to $good-color
- Changed (un)paused table-alt background from lightgreen to $good-color
- DID NOT TEST CHANNEL POINT REWARDS INDICATOR, AS I'M NOT AFFILIATED.
  - But it was impacted by this, and I'm blindly pushing it up.

--- a/src/gui/scss/Light.scss
+++ b/src/gui/scss/Light.scss
@@ -8,7 +8,7 @@ $dark-background-box-shadow: $dark-background-border;
 
 
 $bad-color: #ff0000;
-$good-color: #90ee90;
+$good-color: #10a010;
 $info-color: #30a6ce;
 $highlight-color: #ebb11f;
 
