--- a/src/gui/scss/core/_connection-panel.scss
+++ b/src/gui/scss/core/_connection-panel.scss
@@ -69,7 +69,7 @@
         justify-content: center;
         align-items: center;
         &.connected {
-            background: lightgreen;
+            background: $good-color;
         }
         &.disconnected {
             background: grey;
