--- a/src/gui/scss/core/_global.scss
+++ b/src/gui/scss/core/_global.scss
@@ -66,7 +66,7 @@
 
 .variable-menu {
   width: 500px;
-  background: #060707;
+  background: $variable-menu-bg;
   position: absolute;
   right: 0px;
   bottom: 100%;
@@ -76,6 +76,10 @@
   &.below, &.under, &.bottom {
     bottom: unset;
     top: 100%;
+  }
+  .magic-tooltip {
+    color: $variable-magic-tooltip-fg;
+    text-decoration: underline;
   }
 }
 
