"That's too blue"

--- a/src/gui/scss/Midnight.scss
+++ b/src/gui/scss/Midnight.scss
@@ -132,7 +132,7 @@ $effect-category-bg: $dark-background-color;
 $effect-category-hover-bg: $medium-background-color;
 $effect-category-selected-bg: $light-background-color;
 $effect-def-bg: #515357;
-$effect-def-hover-bg: $medium-background-color;
+$effect-def-hover-bg: #3e4356;
 $effect-def-selected-border: #767a81;
 $effect-def-selected-check: #2df92d;
 $effect-dialog-bg: #43454a;
