chore: tone down the brightness of the chat alert bg color

--- a/src/gui/scss/Light.scss
+++ b/src/gui/scss/Light.scss
@@ -9,7 +9,7 @@ $dark-background-box-shadow: $dark-background-border;
 
 $bad-color: #ff0000;
 $good-color: #90ee90;
-$info-color: #30a6ce;
+$info-color: #30a6ce40;
 $highlight-color: #ebb11f;
 
 $content-text-color: #25292a;
