--- a/src/gui/scss/Obsidian.scss
+++ b/src/gui/scss/Obsidian.scss
@@ -8,7 +8,7 @@ $dark-background-box-shadow: adjust-color(#2d2b2b, $red: 7, $green: 7, $blue: 7)
 
 $bad-color: #ff0000;
 $good-color: #90ee90;
-$info-color: #30a6ce;
+$info-color: #30a6ce40;
 $highlight-color: #ebb11f;
 
 $content-text-color: #ffffff;
