--- a/src/gui/scss/Midnight.scss
+++ b/src/gui/scss/Midnight.scss
@@ -9,7 +9,7 @@ $dark-background-box-shadow: adjust-color($dark-background-color, $red: 7, $gree
 
 $bad-color: #ff0000;
 $good-color: #90ee90;
-$info-color: #30a6ce;
+$info-color: #30a7ce40;
 $highlight-color: #ebb11f;
 
 
