--- a/src/gui/app/templates/_extension-page.html
+++ b/src/gui/app/templates/_extension-page.html
@@ -1,4 +1,4 @@
-<extension-page-content ng-if="page && page.type === 'angularjs'" page="page"></extension-page-content>
+<angularjs-extension-page-content ng-if="page && page.type === 'angularjs'" page="page"></angularjs-extension-page-content>
 
 <!-- Below line is just an example, actual iframe implementation TBD -->
 <!-- <iframe ng-if="page && page.type === 'iframe'" ng-src="{{page.url}}" frameborder="0" width="100%" height="100%"></iframe> -->
