feat: Golden Kappa Hype Train Indicator
- Add an `$isGoldenKappaTrain` variable for hype train events.
- Add an indicator to the application header.
- Low-hanging fruit for justifying a twurple bump
- Although, the emote is not visibile from within Firebot.
- It *should* be available externally somehow without violating Twitch
  API TOS? ... TBD maybe, hopefully ...

--- a/src/gui/scss/core/_chat.scss
+++ b/src/gui/scss/core/_chat.scss
@@ -381,6 +381,10 @@
         font-weight: bolder;
         text-wrap: nowrap;
     }
+    .golden {
+        color: gold;
+        margin-left: 6px;
+    }
     .time-left {
         opacity: 0.5;
         font-size: 12px;
