--- a/src/gui/app/templates/_currency.html
+++ b/src/gui/app/templates/_currency.html
@@ -3,12 +3,12 @@
 </div>
 
 <div class="p-6">
-    <div ng-if="getCurrencies().length === 0" class="noselect muted pl-5">
+    <div ng-if="currencyService.currencies.length === 0" class="noselect muted pl-5">
         <span class="hvr-bob"><i class="fas fa-arrow-up"></i></span><span class="ml-3">No currencies saved. You should make one! :) </span>
     </div>
 
     <div class="mt-8" style="display:flex;flex-wrap: wrap;">
-        <div ng-repeat="currency in getCurrencies() track by $index" ng-class="{'disabled': !currency.active}" class="fb-tile green centered mr-4" style="flex: 0 0 auto;width:250px;height:150px;">
+        <div ng-repeat="currency in currencyService.currencies track by $index" ng-class="{'disabled': !currency.active}" class="fb-tile green centered mr-4" style="flex: 0 0 auto;width:250px;height:150px;">
             <div class="edit-btn" ng-click="openAddOrEditCurrencyModal(currency)"></div>
             <div class="content row">
                 <div class="detail-wrapper nomargin">
