chore: AutoMod from PubSub to EventSub
- Migrate AutoMod away from PubSub.
- Features lost from this, at present:
  - Flagged message part differentiation.
  - Held message sender's name color.

Revision 2:
- Address Enumerated but Unnumbered Concerns, notably the statement:
> Also, once we get the updated Twurple code, we should start using the
> new AutoMod statuses to match Twitch's data format (e.g. `allowed` vs.
> `APPROVED`).
- All remaining concerns still persist, for the moment
- Fixed AutoMod hold event errantly using twitchEventsHandler instead of
  frontendCommunicator.

Revision 3:
- Random errant whitespace correction.

--- a/src/gui/scss/core/_chat.scss
+++ b/src/gui/scss/core/_chat.scss
@@ -82,13 +82,13 @@
         left: 0;
         height: 100%;
         width: 3px;
-        &.ALLOWED {
+        &.approved {
             background: #00db84;
         }
-        &.PENDING {
+        &.pending {
             background: #ffb31a
         }
-        &.DENIED, &.EXPIRED {
+        &.denied, &.expired {
             background: #ff4662;
         }
     }
