feat(chat UI): Custom Chat Message Fonts (#2955)
- Add a Use Custom Font toggle to chat settings. This expands to a
  ui-select font chooser for chat message text.
- This custom font is used for message text, and not URLs, alerts,
  usernames, or in any other areas besides plain message text.
- The ui-select-choices displays the font name, an emdash, and the
  stylized font name in *that* font face, in the custom size when
  enabled.
- Add two settings:
  - `ChatCustomFontFamily` string, with the name of the font to use.
  - `ChatCustomFontFamilyEnabled` boolean, whether or not to use a
    custom font face.
- The 12 default fonts are included in the available list, and more can
  be added through the Overlay Settings.
- Unfortunately, without more work in font manager, there's no way to
  choose font-type for the default fonts, and summernote is out of place
  here. Custom fonts with types can be loaded and work, just no 'Open
  Sans' Bold, or the like.
- for #2955

--- a/src/gui/app/templates/chat/_chat-messages.html
+++ b/src/gui/app/templates/chat/_chat-messages.html
@@ -75,6 +75,7 @@
             update-chat-input="updateChatInput(text)"
             on-reply-clicked="onReplyClicked(threadOrReplyMessageId)"
             chat-size-style="{{customFontSizeStyle}}"
+            font-family-style="{{customFontFamilyStyle}}"
           />
           <reward-redemption
             ng-if="chatItem.type === 'redemption'"
@@ -110,6 +111,7 @@
               hide-reply-banner="true"
               disable-interactions="true"
               chat-size-style="{{customFontSizeStyle}}"
+              font-family-style="{{customFontFamilyStyle}}"
             />
         </div>
         <div class="thread-replying-to" ng-if="cms.threadDetails.replyToMessageId != cms.threadDetails.threadParentMessageId">
