feat(effects): Make chat feed alert icon configurable (#3157)

--- a/src/gui/app/templates/chat/_chat-messages.html
+++ b/src/gui/app/templates/chat/_chat-messages.html
@@ -83,7 +83,8 @@
           />
           <chat-alert
             ng-if="chatItem.type === 'alert'"
-            message="chatItem.data"
+            alert-message="chatItem.message"
+            alert-icon="chatItem.icon"
           />
         </div>
       </div>
