--- a/src/gui/scss/core/_controls.scss
+++ b/src/gui/scss/core/_controls.scss
@@ -227,12 +227,13 @@
 }
 
 .fb-select {
-    height: 37px;
+    height: 42px;
     color: white;
     background: #24262A;
-    border-radius: 3px;
+    border-radius: 8px;
     border: none;
     width: 100%;
+    padding: 0 10px;
     margin-bottom: 5px;
     &:hover {
         cursor: pointer;
