--- a/src/resources/overlay/index.ejs
+++ b/src/resources/overlay/index.ejs
@@ -30,6 +30,8 @@
     </body>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/motion@12.23.16/dist/motion.min.js"></script>
     
     <script src="js/reconnecting-websocket.js"></script>
     <script src="js/util.js"></script>
