--- a/src/gui/scss/core/_bootstrap-overrides.scss
+++ b/src/gui/scss/core/_bootstrap-overrides.scss
@@ -408,7 +408,7 @@
 
 .input-group .form-control {
     z-index: 0;
-    float: none;
+    // float: none;
 }
 
 .form-group {
@@ -743,4 +743,10 @@ code {
 
 hr {
     border-top: 1px solid #53545b;
+}
+
+// any input group addon that doesn't also have the class .color-picker-swatch
+.input-group-addon-normalize .input-group-addon:not(.color-picker-swatch) {
+    --fb-input-group-addon-width: 100px;
+    min-width: var(--fb-input-group-addon-width);
 }
