feat: Overlay Widgets  (#3252)
* wip

* wip

* animate widget position updates

* fix default param values overwriting existing

* re-order overlay res presets

* color picker styling improvements

* parameter bottom hr styling improvements

* implement password param type

* implement remainder of existing param types into new system

* Add new hexcolor control and use it for progressbar widget

* Add "Update Overlay Widget Settings" effect

* tweak Update Progress Bar effect categories

* add Toggle Overlay Widgets effect

* generate uuid for new overlay widget in add/edit modal instead

* implement live preview mode for overlay widgets

* implement entry and exit animations for overlay widgets

* add overlay widget type and config managers

* add ability to export overlay widget configs in setups

* fix widget duplication not working

* implement dynamic countdown timer widgets

* hook up widget type event callbacks, add support for onInitialLoad callback in widget overlay extension

* refactor widget utils in overlay

* refactor update progress bar effect

* add Custom and Custom (Advanced) overlay widgets + effects & vars

* add z-index option to overlay widgets

* Add option for overlay widget types to supply default aspect ratio of new widgets

* Add title option to progress bar widget

--- a/src/gui/scss/core/_bootstrap-overrides.scss
+++ b/src/gui/scss/core/_bootstrap-overrides.scss
@@ -408,7 +408,7 @@
 
 .input-group .form-control {
     z-index: 0;
-    float: none;
+    // float: none;
 }
 
 .form-group {
@@ -434,12 +434,19 @@
 }
 
 .color-picker-wrapper .input-group .input-group-addon {
-    width: 40px;
-    border: 1px solid #24262A !important;
-    border-radius: 6px;
+    width: 45px;
+    border: transparent !important;
+    border-radius: 8px;
     &:first-child {
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
+    }
+}
+
+.color-picker-group-wrapper {
+    .color-picker-wrapper .input-group .input-group-addon:first-child {
+        border-top-left-radius: 0px !important;
+        border-bottom-left-radius: 0px !important;
     }
 }
 
@@ -732,4 +739,14 @@ code {
 .input-editor-selector-container .form-control,
 .input-editor-selector-container .CodeMirror {
     border-top-left-radius: 0px !important;
+}
+
+hr {
+    border-top: 1px solid #53545b;
+}
+
+// any input group addon that doesn't also have the class .color-picker-swatch
+.input-group-addon-normalize .input-group-addon:not(.color-picker-swatch) {
+    --fb-input-group-addon-width: 100px;
+    min-width: var(--fb-input-group-addon-width);
 }
