feat: counter display widget

--- a/src/resources/overlay/index.ejs
+++ b/src/resources/overlay/index.ejs
@@ -37,6 +37,7 @@
     <script src="js/util.js"></script>
     <script src="js/overlay-widgets.js"></script>
     <script src="js/plugins/create.js"></script>
+    <script src="js/plugins/countUp.umd.js"></script>
     <script src="js/fireworks.js"></script>
     <script src="js/confetti.js"></script>
     <script src="js/fitty.js"></script>
