fix: variable menu styling when attached in an input group

--- a/src/gui/scss/core/_bootstrap-overrides.scss
+++ b/src/gui/scss/core/_bootstrap-overrides.scss
@@ -408,7 +408,11 @@
 
 .input-group .form-control {
     z-index: 0;
-    // float: none;
+    float: none;
+}
+
+.ui-select-bootstrap .form-control {
+    float: left !important;
 }
 
 .form-group {
