fix: ui selects not rendering

--- a/src/gui/scss/core/_bootstrap-overrides.scss
+++ b/src/gui/scss/core/_bootstrap-overrides.scss
@@ -411,7 +411,7 @@
     float: none;
 }
 
-.ui-select-bootstrap .form-control {
+.input-group .ui-select-bootstrap .form-control {
     float: left !important;
 }
 
