--- a/src/gui/scss/core/_chat.scss
+++ b/src/gui/scss/core/_chat.scss
@@ -772,6 +772,20 @@
     line-height: 1;
 }
 
+.rank-role-badge {
+    font-weight: 400;
+    border: 0.5px solid;
+    border-radius: 6px;
+    font-size: 12px;
+    padding: 3px 3px 2px;
+    margin-right: 3px;
+    line-height: 1;
+    display: flex;
+    align-items: center;
+    gap: 2px;
+    justify-content: center;
+}
+
 .activity-message > p:first-child {
     margin: 0 !important;
 }
