--- a/src/gui/scss/Midnight.scss
+++ b/src/gui/scss/Midnight.scss
@@ -140,5 +140,9 @@ $variable-category-bg: #18191b;
 $variable-magic-tooltip-fg: white;
 $variable-menu-bg: #060707;
 
+/* controls */
+$primary-button-bg: #16809c;
+$primary-button-hover-bg: #1f849e;
+
 // Import Core Styles
 @import './core/$importer';
