--- a/src/gui/scss/core/_controls.scss
+++ b/src/gui/scss/core/_controls.scss
@@ -803,7 +803,7 @@ table.fb-table-alt {
 }
 
 .test-effects-btn {
-    color: rgb(27, 146, 177);
+    color: $primary-button-bg;
     font-size: 18px;
 }
 
