going with the darker one

--- a/src/gui/scss/PurpleSky.scss
+++ b/src/gui/scss/PurpleSky.scss
@@ -1,6 +1,6 @@
 // In memory of CKY 💜
 
-$accent: #9900ff;
+$accent: #9900ff; // purple from CKYs channel page, don't change!
 $accent-50: mix(white, $accent, 85%);
 $accent-100: mix(white, $accent, 70%);
 $accent-200: mix(white, $accent, 55%);
